fargate_ecs_stack.yaml
AWSTemplateFormatVersion: 2010-09-09
Parameters:
    Image:
        Type: String
        Description: The image to deploy
Resources:
    P4FargateSecurityGroup:
        Type: AWS::EC2::SecurityGroup
        Properties:
            GroupName: P4FargateSecurityGroup
            GroupDescription: Allows SSH and HTTP traffic
            SecurityGroupIngress:
                -   CidrIp: 0.0.0.0/0
                    IpProtocol: tcp
                    FromPort: 22
                    ToPort: 22
                -   CidrIp: 0.0.0.0/0
                    IpProtocol: tcp
                    FromPort: 80
                    ToPort: 80
    P4FargateCluster:
        Type: AWS::ECS::Cluster
        Properties:
            ClusterName: P4FargateCluster
    P4FargateTask:
        Type: AWS::ECS::TaskDefinition
        Properties:
            Family: P4FargateTask
            ContainerDefinitions:
                -   Name: P4Container
                    Image: !Ref Image
                    PortMappings:
                        -   ContainerPort: 80
                            HostPort: 80
                            Protocol: http
            Cpu: 1024
            Memory: 3072
            TaskRoleArn: arn:aws:iam::989870301024:role/LabRole
            ExecutionRoleArn: arn:aws:iam::989870301024:role/LabRole
            NetworkMode: awsvpc
            RequiresCompatibilities:
                - FARGATE
    P4FargateService:
        Type: AWS::ECS::Service
        Properties:
            Cluster: !Ref P4FargateCluster
            DesiredCount: 1
            LaunchType: FARGATE
            NetworkConfiguration:
                AwsvpcConfiguration:
                    AssignPublicIp: ENABLED
                    Subnets:
                        - subnet-00f75e8296c3061d1
                    SecurityGroups:
                        - !GetAtt P4FargateSecurityGroup.GroupId
            TaskDefinition: !Ref P4FargateTask
